# libshvrpc-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: canrw.rs  client.rs  datachange.rs  framerw.rs  journalentry.rs  journalrw.rs  lib.rs  metamethod.rs  rpc.rs  rpcdiscovery.rs  rpcframe.rs  rpcmessage.rs  rpctype.rs  serialrw.rs  streamrw.rs  typeinfo.rs  util.rs  websocketrw.rs
tests/: log2.cpon  test.log2
