[package]
name = "shvrpc"
description = "Rust implementation of the SHV-RPC protocol"
license = "MIT"
repository = "https://github.com/silicon-heaven/libshvrpc-rs"
version = "7.1.8"
edition = "2024"

[dependencies]
shvproto = { version = "3.6.27" }
futures = "0.3.29"
log = "0.4.21"
sha1 = "0.10.6"
hex = "0.4.3"
url = { version = "2.5.4", features = ["serde"] }
glob = "0.3.1"
duration-str = "0.18.0"
async-trait = "0.1.77"
crc = "3.0.1"
serde = "1.0.193"
serde_yaml = "0.9.29"
futures-time = "3.0.0"
tungstenite = { version = "0.28.0", optional = true, default-features = false }
anyhow = "1.0.98"
socketcan = { version = "3.5.0", optional = true, default-features = false, features = ["dump"] }
thiserror = { version = "2.0.16", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
#async-std = ["dep:async-std"]
websocket = ["dep:tungstenite"]
can = ["dep:socketcan", "dep:thiserror"]
