[package]
name = "shvrpc"
description = "Rust implementation of the SHV-RPC protocol"
license = "MIT"
repository = "https://github.com/silicon-heaven/libshvrpc-rs"
version = "9.0.1"
edition = "2024"

[dependencies]
shvproto = "3.6.27"
futures = "0.3.29"
log = "0.4.21"
sha1 = "0.10.6"
hex = "0.4.3"
url = { version = "2.5.4", features = ["serde"] }
glob = "0.3.1"
duration-str = "0.19.0"
async-trait = "0.1.77"
crc = "3.0.1"
serde = "1.0.193"
serde_yaml = "0.9.29"
futures-time = "3.0.0"
tungstenite = { version = "0.28.0", optional = true, default-features = false }
anyhow = "1.0.98"
socketcan = { version = "3.5.0", optional = true, default-features = false, features = ["dump"] }
thiserror = { version = "2.0.16", optional = true }
bitflags = { version = "2.10.0", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
macro_rules_attribute = "0.2.2"
smol = "2"
smol-macros = "0.1"

[features]
default = []
journal = ["dep:bitflags"]
websocket = ["dep:tungstenite"]
can = ["dep:socketcan", "dep:thiserror"]
